resources/css/themes.css
:root {
    --color-primary-50: rgb(241, 243, 255);
    --color-primary-100: rgb(229, 231, 255);
    --color-primary-200: rgb(206, 209, 255);
    --color-primary-300: rgb(167, 170, 255);
    --color-primary-400: rgb(118, 117, 255);
    --color-primary-500: rgb(74, 61, 255);
    --color-primary-600: rgb(51, 22, 255);
    --color-primary-700: rgb(33, 4, 253);
    --color-primary-800: rgb(27, 3, 211);
    --color-primary-900: rgb(25, 5, 173);
    --color-primary-950: rgb(9, 0, 118);
}

